// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleCard renders an article properly 1`] = `
.c6 {
  margin: 10px 30px 0 0;
  white-space: nowrap;
}

.c5 {
  margin: 10px 30px 0 0;
}

.c5:before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: black;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: black;
}

.c10 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c8 {
  position: relative;
  width: 50%;
  height: inherit;
  margin-left: 30px;
}

.c0 {
  display: block;
  border: 1px solid;
  border-radius: 2px;
  color: black;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c9 {
  opacity: 1;
}

.c0:hover .c9 {
  opacity: 0.7;
}

.c0 .c7 {
  background: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 50%;
  margin-bottom: 5px;
}

.c2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
  margin-bottom: 30px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
}

@media (max-width:720px) {
  .c6 {
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c5 {
    margin: 10px 20px 0 0;
  }
}

@media (max-width:900px) {
  .c8 {
    width: 100%;
    margin-left: 0;
    margin-bottom: 10px;
  }
}

@media (max-width:900px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    padding: 20px;
  }
}

@media (max-width:900px) {
  .c1 {
    width: 100%;
    margin-bottom: 0;
  }
}

@media (max-width:900px) {
  .c2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c3 {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
    margin-bottom: 20px;
  }
}

<a
  className="ArticleCard c0"
  color="black"
  href="new-yorks-next-art-district"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div>
      <div
        className="sc-EHOje htYXHg bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        The Future of Art
      </div>
      <div
        className="c2"
      >
        New York's Next Art District
      </div>
      <div
        className="c3"
      >
        Land exhibitions, make influential contacts, and gain valuable feedback about your work.
      </div>
    </div>
    <div
      className="Byline c4"
      color="black"
    >
      <div
        className="uTxCW bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        <div
          className="c5"
          color="black"
        >
          Casey Lesser
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="uTxCW bTNvyd"
          fontFamily="Unica77LLWebMedium"
          fontSize={14}
        >
          May 19, 2017
        </div>
      </div>
    </div>
  </div>
  <div
    className="c7 c8"
  >
    <img
      className="c9 c10"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
    />
  </div>
</a>
`;

exports[`ArticleCard renders an article with children properly 1`] = `
.c7 {
  width: 32px;
  height: 32px;
}

.c5 {
  position: relative;
  width: 50%;
  height: inherit;
  margin-left: 30px;
}

.c0 {
  display: block;
  border: 1px solid;
  border-radius: 2px;
  color: black;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .ArticleCard__Image-nqsvxw-0 {
  opacity: 1;
}

.c0:hover .ArticleCard__Image-nqsvxw-0 {
  opacity: 0.7;
}

.c0 .c4 {
  background: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 50%;
  margin-bottom: 5px;
}

.c2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
  margin-bottom: 30px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  position: absolute;
  left: 20px;
  bottom: 20px;
  right: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 svg {
  width: 40px;
}

@media (max-width:900px) {
  .c5 {
    width: 100%;
    margin-left: 0;
    margin-bottom: 10px;
  }
}

@media (max-width:900px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    padding: 20px;
  }
}

@media (max-width:900px) {
  .c1 {
    width: 100%;
    margin-bottom: 0;
  }
}

@media (max-width:900px) {
  .c2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c3 {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
    margin-bottom: 20px;
  }
}

@media (max-width:900px) {
  .c6 svg {
    width: 30px;
  }
}

<a
  className="ArticleCard c0"
  color="black"
  href="joanne-artman-gallery-poetry-naturerefinement-form"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div>
      <div
        className="sc-EHOje htYXHg bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        The Future of Art
      </div>
      <div
        className="c2"
      >
        <div>
          Child 
          title
        </div>
      </div>
      <div
        className="c3"
      >
        <div>
          Child 
          description
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM fVViVF bTNvyd"
      fontFamily="Unica77LLWebMedium"
      fontSize={14}
    >
      <div>
        Child 
        date
      </div>
    </div>
  </div>
  <div
    className="c4 c5"
  >
    <div>
      Child 
      image
    </div>
    <div
      className="c6"
    >
      <svg
        className="c7"
        version="1.1"
        viewBox="0 0 40 56"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <polygon
            fill="black"
            points="0 0 0 56 39.3600006 28"
          />
        </g>
      </svg>
      <div
        className="uTxCW bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        02:28
      </div>
    </div>
  </div>
</a>
`;

exports[`ArticleCard renders an article with unpublished media properly 1`] = `
.c4 {
  margin: 10px 30px 0 0;
  white-space: nowrap;
}

.c10 {
  width: 32px;
  height: 32px;
}

.c8 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c6 {
  position: relative;
  width: 50%;
  height: inherit;
  margin-left: 30px;
}

.c0 {
  display: block;
  border: 1px solid;
  border-radius: 2px;
  color: black;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c7 {
  opacity: 1;
}

.c0:hover .c7 {
  opacity: 0.7;
}

.c0 .c5 {
  background: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 50%;
  margin-bottom: 5px;
}

.c2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 45px;
  line-height: 1.2em;
  margin-bottom: 30px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
}

.c9 {
  position: absolute;
  left: 20px;
  bottom: 20px;
  right: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 svg {
  width: 40px;
}

@media (max-width:720px) {
  .c4 {
    margin: 10px 20px 0 0;
  }
}

@media (max-width:900px) {
  .c6 {
    width: 100%;
    margin-left: 0;
    margin-bottom: 10px;
  }
}

@media (max-width:900px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    padding: 20px;
  }
}

@media (max-width:900px) {
  .c1 {
    width: 100%;
    margin-bottom: 0;
  }
}

@media (max-width:900px) {
  .c2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c3 {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
    margin-bottom: 20px;
  }
}

@media (max-width:900px) {
  .c9 svg {
    width: 30px;
  }
}

<a
  className="ArticleCard c0"
  color="black"
  href="joanne-artman-gallery-poetry-naturerefinement-form"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <div>
      <div
        className="sc-EHOje htYXHg bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        The Future of Art
      </div>
      <div
        className="c2"
      >
        New Study Shows the Gender Pay Gap for Artists Is Not So Simple
      </div>
      <div
        className="c3"
      >
        The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="uTxCW bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        Aug 28, 2017
      </div>
    </div>
  </div>
  <div
    className="c5 c6"
  >
    <img
      className="c7 c8"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
    />
    <div
      className="c9"
    >
      <svg
        className="c10"
        version="1.1"
        viewBox="0 0 40 56"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <polygon
            fill="black"
            points="0 0 0 56 39.3600006 28"
          />
        </g>
      </svg>
      <div
        className="uTxCW bTNvyd"
        fontFamily="Unica77LLWebMedium"
        fontSize={14}
      >
        02:28
      </div>
    </div>
  </div>
</a>
`;
